--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <p style="font-size:3vw">شرکت فنی مهندسی سرما تکنیک</p>
   <p style="text-align:right">شرکت فنی مهندسی سرما تکنیک با داشتن سابقه ایی بالا در حوزه تعمیر انواع یخچال فریز و یخچال های خانگی و صنعتی و کولرهای گازی اماده ارایه خدمات به همشهری های عزیز تهرانی می باشد جهت انجام هر گونه ارایه خدمات می توتنید با کارشناسان فنی این شرکت تماس حاصل فرمایید.</p>
   <p>برای تماس با ما کافی است که شماره زیر را لمس <a href="tel:09124193071">کنید:</a></p>
-  <p style="color: white;"><b><a href="tel:09124193071">09124193071</a></b></p>
+  <p style="color: white;"><b><a href="tel:"></a></b></p>
   <p>خدمت به شما افتخار ماست</p>
 
 </div> 
